@@ -1,4 +1,7 @@
 Version 1.3.18+svn:
+ * map editor:
+   * activate border transitions in the editor using more translucent images
+     than used ingame
  * language and i18n:
    * updated translations: Chinese, Czech, Danish, Filipino, French, Hungarian,
      Italian, Lithuanian, Polish, Turkish
